--- a/src/kits/riot/components/AlertDialog/AlertDialog.css
+++ b/src/kits/riot/components/AlertDialog/AlertDialog.css
@@ -20,3 +20,15 @@
 .riot-alert__popup--warning .riot-tape {
   background: var(--riot-tape-warning);
 }
+.riot-alert__popup--primary .riot-tape {
+  background: var(--riot-tape-primary);
+}
+.riot-alert__popup--danger .riot-modal-title {
+  background: linear-gradient(transparent 16%, var(--riot-tape-danger) 16% 88%, transparent 88%);
+}
+.riot-alert__popup--warning .riot-modal-title {
+  background: linear-gradient(transparent 16%, var(--riot-tape-warning) 16% 88%, transparent 88%);
+}
+.riot-alert__popup--primary .riot-modal-title {
+  background: linear-gradient(transparent 16%, var(--riot-tape-primary) 16% 88%, transparent 88%);
+}
